# evaopt

./: .TODO.feature  .changelog  .gitignore  .testlog  README.md  requirements.txt  setup.py
backup_modules/evaopt_core/: __init__.py
examples/: advanced_optimization.py  demo_eva.py  demo_llm.py  demo_retro.py  dynamic_optimization.rs  optimize_llm.py  test_block_sparse.py  test_dynamic_neurons.py  test_large_matrix.py  test_llama2.py  test_matrix_opt.py  test_optimizer.py
python/evaopt/: __init__.py  dynamic.py
python/evaopt/core/: __init__.py  config.py  dynamic.py  optimizer.py
python/evaopt/utils/: __init__.py  metrics.py  quantize.py  visualize.py
rust/: Cargo.toml  build.rs
rust/benches/: block_optimization.rs  dynamic_optimization.rs  matrix_optimization.rs
rust/src/: chunk.rs  dynamic.rs  lib.rs  matrix.rs  memory.rs  tensor.rs
