[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "evaopt-core"
version = "0.1.0"
edition = "2021"
authors = ["EvaOpt Team"]
description = "High-performance LLM optimization engine core"

[lib]
name = "evaopt_core"
crate-type = ["lib"]

[[bench]]
name = "dynamic_optimization"
harness = false

[[bench]]
name = "matrix_optimization"
harness = false

[dependencies]
# Core functionality
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numerical computation and optimization
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
rayon = "1.7"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

# Memory management
parking_lot = "0.12"
crossbeam = "0.8"

# Profiling and metrics
tracing = "0.1"
metrics = "0.21"

# Compression and optimization
zstd = "0.13"
half = "2.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
