[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[package]
name = "evaopt-core"
version = "0.1.0"
edition = "2021"
authors = ["EvaOpt Team"]
description = "High-performance LLM optimization engine core"

[lib]
name = "evaopt_core"
crate-type = ["lib"]

[[bench]]
name = "dynamic_optimization"
harness = false

[[bench]]
name = "matrix_optimization"
harness = false

[dependencies]
# Core functionality
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numerical computation and optimization
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
rayon = "1.8"
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

# Memory management
parking_lot = "0.12"
crossbeam = "0.8"

# Profiling and metrics
tracing = { version = "0.1", features = ["attributes"] }
metrics = "0.21"

# Compression and optimization
zstd = { version = "0.13", features = ["zstdmt"] }
half = { version = "2.3", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_futures"] }

[features]
default = []
